--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@redwoodjs/forms": "^0.19.1",
     "@redwoodjs/router": "^0.19.1",
     "@redwoodjs/web": "^0.19.1",
