--- a/web/package.json
+++ b/web/package.json
@@ -14,12 +14,15 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@redwoodjs/forms": "^0.19.1",
     "@redwoodjs/router": "^0.19.1",
     "@redwoodjs/web": "^0.19.1",
     "fontsource-roboto": "^3.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "use-places-autocomplete": "^1.5.1",
+    "use-script": "^2.0.0"
   }
 }
