--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@storybook/addon-actions": "^6.0.22",
     "@storybook/addon-essentials": "^6.0.22",
     "@storybook/addon-links": "^6.0.22",
+    "@storybook/addon-viewport": "^6.0.22",
     "@storybook/react": "^6.0.22",
     "babel-loader": "^8.1.0",
     "react-is": "^16.13.1",
