--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "node": ">=12",
     "yarn": ">=1.15"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "react": "^16.13.1",
+    "tailwindcss": "^1.8.10"
+  },
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
