--- a/package.json
+++ b/package.json
@@ -2,17 +2,13 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/lab": "^4.0.0-alpha.56",
     "@storybook/addon-actions": "^6.0.22",
     "@storybook/addon-essentials": "^6.0.22",
     "@storybook/addon-links": "^6.0.22",
     "@storybook/addon-viewport": "^6.0.22",
     "@storybook/react": "^6.0.22",
     "babel-loader": "^8.1.0",
-    "react-is": "^16.13.1",
-    "use-places-autocomplete": "^1.5.2",
-    "use-script": "^2.0.0"
+    "react-is": "^16.13.1"
   },
   "eslintConfig": {},
   "engines": {
@@ -22,8 +18,11 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "react": "^16.13.1",
-    "tailwindcss": "^1.8.10"
+    "tailwindcss": "^1.8.10",
+    "use-places-autocomplete": "^1.5.2",
+    "use-script": "^2.0.0"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
