--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@storybook/addon-viewport": "^6.0.22",
     "@storybook/react": "^6.0.22",
     "babel-loader": "^8.1.0",
+    "chromatic": "^5.2.0",
     "react-is": "^16.13.1"
   },
   "eslintConfig": {},
@@ -23,6 +24,7 @@
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token y3fawy6z32s"
   }
 }
