--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@storybook/addon-viewport": "^6.0.22",
     "@storybook/react": "^6.0.22",
     "babel-loader": "^8.1.0",
+    "camel-case": "^4.1.1",
     "react-is": "^16.13.1"
   },
   "eslintConfig": {},
