--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,7 @@
       "type": "pwa-node",
       "request": "launch",
       "name": "launch api",
-      "skipFiles": [
-        "<node_internals>/**"
-      ],
+      "skipFiles": ["<node_internals>/**"],
       "cwd": "${workspaceFolder}/api",
       "envFile": "${workspaceFolder}/.env.defaults",
       "program": "${workspaceFolder}/node_modules/.bin/dev-server"
